[project]
name = "crzsnap"
version = "0.1.0"
description = "ZFS snapshot sending script."
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
