[project]
name = "crzsnap"
version = "0.1.0"
description = "ZFS snapshot sending script."
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
dependencies = [
    "doit>=0.36.0",
    "configclass>=0.2.0",
    "platformdirs>=4.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
crzsnap = "crzsnap:main"

[tool.ruff]
src = [ "src", "tests" ]  # https://docs.astral.sh/ruff/faq/#how-does-ruff-determine-which-of-my-imports-are-first-party-third-party-etc
line-length = 79  # flake8 compat
# These will catch missing docstrings and other nits, which pydoclint doesn't.
# Also, add stable-but-disabled E checks
lint.extend-select = ["E3", "E4", "E5", "E7", "E9", "D"]
lint.pydocstyle.convention = "numpy"
lint.pycodestyle.max-line-length = 79  # flake8 compat
lint.preview = true

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
]
